# VNEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: googletest-download.cmake
include/: Background.h  Exceptions.h  Scene.h
include/character/: Char3DModel.h  Character.h  ICharacterModel.h
include/dialogue/: Action.h  Conversation.h  Response.h  Script.h
include/event/: IListener.h  KeyListener.h
include/graphics/: FreetypeFont.h  GLHelper.h  ICamera.h  IDrawable.h  IModel.h  ITextureLoader.h  IUpdateable.h  OrthographicCamera.h  PerspectiveCamera.h  RawModel.h  Shader.h  ShaderProgram.h  Texture.h
include/graphics/UI/: IContainer.h  Pane.h
include/graphics/geometry/: Point.h  Projector.h
include/graphics/glwrapping/: Buffer.h  GLHelper.h  MultiAttribBuffer.h  Shader.h  ShaderProgram.h  VertexArray.h
include/graphics/text/: Codepoint.h  FreeTypeFont.h  Glyph.h  TextLine.h  TypeFace.h
include/init/: GameInit3D.h  IGameInit.h
include/script/: Dialogue.h  Script.h
src/: Background.h  Scene.h
src/dialogue/: Conversation.cpp
src/event/: KeyListener.cpp
src/graphics/: FreetypeFont.cpp  ICamera.cpp  IModel.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  RawModel.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp
src/graphics/UI/: Pane.cpp
src/graphics/geometry/: Projector.cpp
src/graphics/glwrapping/: Shader.cpp  ShaderProgram.cpp  VertexArray.cpp
src/graphics/text/: Codepoint.cpp  FreeTypeFont.cpp  TextLine.cpp
src/init/: GameInit3D.cpp
test/event/: KeyTest.cpp
test/rendering/: FontTest.cpp  GameInitTest.cpp  Triangle.cpp  TriangleModel.cpp
test/unit/: CodepointTest.cpp  ExceptionTest.cpp  GLHelperTest.cpp  PointTest.cpp  main.cpp
